syntax = "proto3";

package server.api;
option go_package = "github.com/xhayamix/proto-gen-transaction/pkg/domain/proto/server/api";

import "google/protobuf/empty.proto";
import "server/enums/active_user_type_gen.proto";
import "validate/validate.proto";

service User {
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse) {}
}

message Profile {
  string userId = 1;
  string publicUserId = 2;
}

message GetProfileRequest {
  string userId = 1 [(validate.rules).string.min_len = 1];
}

message GetProfileResponse { Profile profile = 1; }
